crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__grouped__tests__default.snap
---
source: crates/ruff_db/src/diagnostic/render/grouped.rs
expression: env.render_diagnostics(&diagnostics)
---
fib.py:
  1:8 F401 `os` imported but unused
  6:5 F841 Local variable `x` is assigned to but never used

undef.py:
  1:4 F821 Undefined name `a`
