crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__grouped__tests__fix_status_unsafe.snap
---
source: crates/ruff_db/src/diagnostic/render/grouped.rs
expression: env.render_diagnostics(&diagnostics)
---
fib.py:
  1:8 F401 [*] `os` imported but unused
    |
  1 | import os
    |        ^^ F401
    |
    = help: Remove unused import: `os`
  
  6:5 F841 [*] Local variable `x` is assigned to but never used
    |
  4 | def fibonacci(n):
  5 |     """Compute the nth number in the Fibonacci sequence."""
  6 |     x = 1
    |     ^ F841
  7 |     if n == 0:
  8 |         return 0
    |
    = help: Remove assignment to unused variable `x`
  
undef.py:
  1:4 F821 Undefined name `a`
    |
  1 | if a == 1: pass
    |    ^ F821
    |
