crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__grouped__tests__syntax_errors.snap
---
source: crates/ruff_db/src/diagnostic/render/grouped.rs
expression: env.render_diagnostics(&diagnostics)
---
syntax_errors.py:
  1:15 SyntaxError: Expected one or more symbol names after import
  3:12 SyntaxError: Expected ')', found newline
